2006-04-28  Nate Nielsen  <nielsen@memberwebs.com>

    * Makefile.am:
    * agent/seahorse-agent.c:
    * agent/seahorse-agent.h:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-passphrase.c:
    * libseahorse/seahorse-passphrase.h (added):
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-prefs-cache.c:
    * libseahorse/seahorse-ssh-askpass.c: Added checks so agent doesn't
    startup when another agent is already running. 
    
2006-04-28  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-service-keyset.c:
    * daemon/seahorse-service-keyset.xml:
    * daemon/seahorse-service.c:
    * daemon/seahorse-service.h:
    * daemon/seahorse-service.xml:
    * dbus-match-keyset.py (added): Added the 'MatchKeys' DBUS API
    
2006-04-28  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse\seahorse-key.c:
    * libseahorse\seahorse-key.h:
    * libseahorse\seahorse-pgp-key.c:
    * libseahorse\seahorse-pgp-source.c:
    * libseahorse\seahorse-server-source.c:
    * libseahorse\seahorse-ssh-key.c:
    * libseahorse\seahorse-unknown-key.c:
    * libseahorse\seahorse-unknown-source.c: Better names for various
    key flags
     
2006-04-26  Nate Nielsen  <nielsen@memberwebs.com>
    
    * agent/seahorse-agent-cache.c: Compatibility with gnome-gpg
    * agent/seahorse-agent-prompt.c: Don't show two prompts on top 
    of each other.
    
2006-04-24  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-cache.c:
    * libseahorse/seahorse-prefs-cache.c:
    * libseahorse/seahorse-prefs.glade: Some polish for new 
    agent/gnome-keyring integration. 
    
2006-04-24  Nate Nielsen  <nielsen@memberwebs.com>

    * bonobo/seahorse-pgp-file-listener.c:
    * libcryptui/cryptui-key-chooser.c:
    * libcryptui/cryptui-keyset.c:
    * libcryptui/cryptui-keyset.h:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-op.c:
    * libseahorse/seahorse-op.h: