@@ -1,3 +1,9 @@
+2006-05-01  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * src/seahorse-key-manager.c:
+    * src/seahorse-keyserver-results.c: Set translation domain
+    properly on GtkActionEntry's. By Takeshi AIHANA. Fixes bug #340260 
+
 2006-04-28  Nate Nielsen  <nielsen@memberwebs.com>
 
     * Makefile.am:
